# sudokill

./: .gitignore  CMakeLists.txt  README  alphabetapruning.h  board_parser.h  board_parser_gtest.h  player.h  player_gtest.h  sudokill.cpp  sudokill_core.cpp  sudokill_core.h  sudokill_core_gtest.h  sudokill_gtest.cpp  timer.h
arch/: README  build.xml
